--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: jupyter-scatterplot
+name: jscatter
 
 channels:
   - conda-forge
@@ -11,5 +11,6 @@ dependencies:
   - numpy
   - pip
   - pip:
-    - jupyterlab>=1.1.1
-    - ipywidgets>=7.5.1
+    - jupyterlab>=3.0.6
+    - ipywidgets>=7.6.3
+    - jupyterlab_widgets>=1.0.0
