--- a/js/package.json
+++ b/js/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "jupyter-scatterplot",
+  "name": "jscatter",
   "version": "0.1.0",
-  "description": "A scatterplot extension for Jupyter Notebook and Lab",
+  "description": "A scatter plot extension for Jupyter Notebook and Lab",
   "author": "Fritz Lekschas",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/flekschas/jupyter-scatterplot.git"
+    "url": "https://github.com/flekschas/jscatter.git"
   },
   "license": "Apache-2.0",
   "keywords": [
-    "scatterplot",
+    "scatter",
+    "scatter plot",
     "jupyter",
     "jupyterlab",
     "jupyterlab-extension"
@@ -24,31 +25,45 @@
     "dist/*.js"
   ],
   "scripts": {
-    "build": "webpack",
-    "clean": "rimraf dist/",
+    "clean": "rimraf dist/ && rimraf ../jscatter/labextension/ && rimraf ../jscatter/nbextension",
+    "prepare": "npm run clean && npm run build:prod",
+    "build": "webpack --mode=development && npm run build:labextension:dev",
+    "build:prod": "webpack --mode=production && npm run build:labextension",
+    "build:labextension": "jupyter labextension build .",
+    "build:labextension:dev": "jupyter labextension build --development True .",
+    "watch": "webpack --watch --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3",
+    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4",
     "camera-2d-simple": "^2.2.1",
     "dom-2d-camera": "^1.0.2",
-    "regl-scatterplot": "^0.10.0",
     "gl-matrix": "^3.1.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "regl-scatterplot": "^0.14.0"
   },
   "devDependencies": {
+    "@jupyterlab/builder": "^3.0.0",
     "css-loader": "^3.5.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "lint-staged": "^10.2.7",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   },
   "jupyterlab": {
-    "extension": "labplugin"
+    "extension": "labplugin",
+    "outputDir": "../jscatter/labextension",
+    "sharedPackages": {
+      "@jupyter-widgets/base": {
+        "bundled": false,
+        "singleton": true
+      }
+    }
   }
 }
