--- a/js/package.json
+++ b/js/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "jscatter",
+  "name": "jupyter-scatter",
   "version": "0.1.0",
   "description": "A scatter plot extension for Jupyter Notebook and Lab",
   "author": "Fritz Lekschas",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/flekschas/jscatter.git"
+    "url": "https://github.com/flekschas/jupyter-scatter.git"
   },
   "license": "Apache-2.0",
   "keywords": [
