--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Build Python & JavaScript
 
 on:
   push:
@@ -10,9 +10,9 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build-py:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
@@ -37,3 +37,20 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  build-js:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: cd js
+      - run: npm ci
+      - run: npm run build --if-present
