--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -14,9 +14,10 @@ jobs:
         with:
           node-version: 12
       - run: sudo apt-get install xvfb
-      - run: cd js
       - run: npm ci
+        working-directory: js
       - run: npm run build --if-present
+        working-directory: js
         env:
           CI: true
 
@@ -29,9 +30,11 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: cd js
       - run: npm ci
+        working-directory: js
       - run: npm run prerelease
+        working-directory: js
       - run: npm publish
+        working-directory: js
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
