--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,11 +47,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install jupyterlab>=3.0.0,==3.*
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-        working-directory: js
-      - run: npm run build --if-present
         working-directory: js
