--- a/js/package.json
+++ b/js/package.json
@@ -36,11 +36,11 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4",
-    "camera-2d-simple": "^2.2.1",
-    "dom-2d-camera": "^1.2.2",
+    "camera-2d-simple": "~2.2.1",
+    "dom-2d-camera": "~1.2.3",
     "gl-matrix": "^3.1.0",
     "lodash": "^4.17.4",
-    "regl-scatterplot": "^0.16.1"
+    "regl-scatterplot": "^0.17.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0",
