New python api (#4)
* Whatever

* Properly destroy regl-scatterplot on destroy of a widget instance

* Complete rewrite of the Python API to match #3

* Fix two-way selection

* Fix typo

* Rename

- `example.ipynb` -> `get-started.ipynb`
- `Untitled.ipynb` -> `examples.ipynb`

* Bump regl-scatterplot

* Add convenience function

* Update

* Fix typo: recticle >> reticle

* Add support for downloading pixels

* Implement functional API

* Allow programmatic hovering. Transition data

* Improve interactivity of the API

* Allow setting width and background image from URL

* Reflect new readme

* Provide examples of the new API

* Add compose()

* Fix width assignment

* Simplify linspace mapping and fix an issues with size()

* Outsource API docs

* Update regl-scatterplot

* Bump

* Fixify selections

* Allow choosing reticle color automatically

* Add tests and fix bugs

* Remove unnecessary sort order

* Validate encoding channel dtypes

* Improve handling of reverse map orders

* Update docs with connection_* functions

* Functionalize

* Make sure functions act as getter when no argument is specified

* Simplify

* Remove unnecessary code

* Improve map order handling

* Update

* Add title

* Avoid depending on sklearn

* Use internal minmax_scale

* Fix minmax_scaler

* Bump regl-scatterplot and add missing regl dependency

* Improve getting started section and add links to docs

* Improve connect() docs

--- a/js/package.json
+++ b/js/package.json
@@ -36,14 +36,15 @@
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4",
-    "camera-2d-simple": "^2.2.1",
-    "dom-2d-camera": "^1.2.1",
+    "camera-2d-simple": "~2.2.1",
+    "dom-2d-camera": "~1.2.3",
     "gl-matrix": "^3.1.0",
     "lodash": "^4.17.4",
-    "regl-scatterplot": "^0.15.1"
+    "regl": "~2.1.0",
+    "regl-scatterplot": "^0.19.2"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0",
+    "@jupyterlab/builder": "^3.0.8",
     "css-loader": "^3.5.3",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
