--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyter-scatter",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A scatter plot extension for Jupyter Notebook and Lab",
   "author": "Fritz Lekschas",
   "main": "src/index.js",
@@ -40,6 +40,7 @@
     "dom-2d-camera": "~1.2.3",
     "gl-matrix": "^3.1.0",
     "lodash": "^4.17.4",
+    "pub-sub-es": "~2.0.1",
     "regl": "~2.1.0",
     "regl-scatterplot": "^1.0.0"
   },
