chore: use modern build/install with jupyter-packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,34 @@
-[bdist_wheel]
-universal=1
-
 [metadata]
-description-file = README.md
-license_file = LICENSE
+name = jupyter-scatter
+author = Fritz Lekschas
+author_email = code@lekschas.de
+license = Apache-2.0
+description = A scatter plot extension for Jupyter Notebook and Lab
+url = https://github.com/flekschas/jscatter
+long_description = file: README.md
+long_description_content_type = text/markdown
+classifiers =
+    Development Status :: 4 - Beta
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Topic :: Multimedia :: Graphics
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+keywords =
+    scatter
+    scatter plot
+    jupyter
+    ipython
+    ipywidgets
+    jupyterlab
+    jupyterlab-extension
+    widgets
+
+[options]
+zip_safe = False
+include_package_data = True
+packages = find:
+tests_require =
+  pytest
