Improve scatter plot linking

--- a/js/package.json
+++ b/js/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4",
     "camera-2d-simple": "~2.2.1",
-    "dom-2d-camera": "~1.2.3",
-    "gl-matrix": "^3.1.0",
-    "lodash": "^4.17.4",
+    "dom-2d-camera": "~2.2.3",
+    "gl-matrix": "^3.3.0",
+    "lodash": "^4.17.21",
     "pub-sub-es": "~2.0.1",
     "regl": "~2.1.0",
-    "regl-scatterplot": "^1.0.0"
+    "regl-scatterplot": "~1.2.2"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.8",
