--- a/environment.yml
+++ b/environment.yml
@@ -6,10 +6,11 @@ channels:
 
 dependencies:
   - python>=3.7
-  - nodejs>=12.*
+  - nodejs==16.6.*
   - matplotlib
   - numpy
   - pandas
+  - pyarrow
   - pip
   - pip:
     - jupyterlab>=3.0.6
