--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyter-scatter",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "A scatter plot extension for Jupyter Notebook and Lab",
   "author": "Fritz Lekschas",
   "main": "src/index.js",
@@ -25,18 +25,18 @@
     "dist/*.js"
   ],
   "scripts": {
-    "clean": "rimraf dist/ && rimraf ../jscatter/labextension/ && rimraf ../jscatter/nbextension",
-    "prepare": "npm run clean && npm run lint && npm run build:prod",
-    "build": "webpack --mode=development && npm run build:labextension:dev",
-    "build:prod": "webpack --mode=production && npm run build:labextension",
-    "build:labextension": "jupyter labextension build .",
-    "build:labextension:dev": "jupyter labextension build --development True .",
-    "lint": "eslint src embed.js extension.js get-version-info.js index.js labplugin.js",
-    "watch": "webpack --watch --mode=development",
-    "test": "npm run lint"
+    "ssl": "export NODE_OPTIONS=--openssl-legacy-provider",
+    "clean": "npm run ssl && rimraf dist/ && rimraf ../jscatter/labextension/ && rimraf ../jscatter/nbextension",
+    "prepare": "npm run ssl && npm run clean && npm run lint && npm run build:prod",
+    "build": "npm run ssl && webpack --mode=development && npm run build:labextension:dev",
+    "build:prod": "npm run ssl && webpack --mode=production && npm run build:labextension",
+    "build:labextension": "npm run ssl && jupyter labextension build .",
+    "build:labextension:dev": "npm run ssl && jupyter labextension build --development True .",
+    "lint": "npm run ssl && eslint src embed.js extension.js get-version-info.js index.js labplugin.js",
+    "watch": "npm run ssl && webpack --watch --mode=development",
+    "test": "npm run ssl && npm run lint"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1.10 || ^2 || ^3 || ^4",
     "camera-2d-simple": "~2.2.1",
     "d3-axis": "~3.0.0",
     "d3-scale": "~4.0.2",
@@ -49,7 +49,7 @@
     "regl-scatterplot": "~1.3.0"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.8",
+    "@jupyterlab/builder": "^3.4.8",
     "css-loader": "^3.5.3",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
