--- a/setup.cfg
+++ b/setup.cfg
@@ -12,10 +12,10 @@ classifiers =
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     Topic :: Multimedia :: Graphics
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 keywords =
     scatter
     scatter plot
@@ -30,5 +30,8 @@ keywords =
 zip_safe = False
 include_package_data = True
 packages = find:
+install_requires =
+    ipywidgets>=7.6,<9
+python_requires = >=3.7
 tests_require =
   pytest
