Allow ES2020. Simplify code

--- a/js/.eslintrc
+++ b/js/.eslintrc
@@ -11,6 +11,9 @@
     "eslint:recommended",
     "prettier"
   ],
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
   "plugins": [
     "prettier"
   ],
