--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,53 @@
 [build-system]
-requires = ["jupyter_packaging>=0.10,<2", "jupyterlab==3.*", "setuptools>=40.8.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "jupyter-scatter"
+description = "A scatter plot extension for Jupyter Notebook and Lab"
+authors = [
+  { name = "Fritz Lekschas", author_email = "code@lekschas.de" }
+]
+license = { text = "Apache-2.0" }
+readme = "README.md"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Topic :: Multimedia :: Graphics",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+keywords = [
+    "scatter",
+    "scatter plot",
+    "jupyter",
+    "ipython",
+    "ipywidgets",
+    "jupyterlab",
+    "jupyterlab-extension",
+    "widgets",
+]
+dependencies = [
+    "anywidget>=0.2.0",
+    "ipywidgets>=7.6,<9",
+    "ipython",
+    "matplotlib",
+    "numpy",
+    "pandas",
+    "traittypes>=0.2.1",
+    "typing_extensions",
+]
+
+[project.urls]
+homepage = "https://github.com/flekschas/jscatter"
+
+[project.optional-dependencies]
+test = [
+    "jupyter",
+    "jupyterlab>=3.0",
+    "pytest",
+]
