--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Publish to PyPI and NPM
+name: Publish to PyPI
 
 on:
   push:
@@ -28,26 +28,3 @@ jobs:
         run: |
           python -m build .
           twine upload dist/*
-
-  publish-npm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install jupyterlab>=3.0.0,==3.*
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-        working-directory: js
-      - run: npm publish
-        working-directory: js
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
