--- a/js/package.json
+++ b/js/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rm ../jscatter/bundle.js",
+    "prepare": "npm run lint && npm run build",
     "build": "esbuild --bundle --format=esm --outfile=../jscatter/bundle.js src/index.js",
     "lint": "eslint src/*",
     "watch": "npm run build -- --watch",
@@ -33,6 +34,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "rimraf": "^5.0.1"
   }
 }
