--- a/js/package.json
+++ b/js/package.json
@@ -28,16 +28,15 @@
     "dist/*.js"
   ],
   "scripts": {
-    "ssl": "export NODE_OPTIONS=--openssl-legacy-provider",
-    "clean": "npm run ssl && rimraf dist/ && rimraf ../jscatter/labextension/ && rimraf ../jscatter/nbextension",
-    "prepare": "npm run ssl && npm run clean && npm run lint && npm run build:prod",
-    "build": "npm run ssl && webpack --mode=development && npm run build:labextension:dev",
-    "build:prod": "npm run ssl && webpack --mode=production && npm run build:labextension",
-    "build:labextension": "npm run ssl && jupyter labextension build .",
-    "build:labextension:dev": "npm run ssl && jupyter labextension build --development True .",
-    "lint": "npm run ssl && eslint src embed.js extension.js get-version-info.js index.js labplugin.js",
-    "watch": "npm run ssl && webpack --watch --mode=development",
-    "test": "npm run ssl && npm run lint"
+    "clean": "rimraf dist/ && rimraf ../jscatter/labextension/ && rimraf ../jscatter/nbextension",
+    "prepare": "npm run clean && npm run lint && npm run build:prod",
+    "build": "webpack --mode=development && npm run build:labextension:dev",
+    "build:prod": "webpack --mode=production && npm run build:labextension",
+    "build:labextension": "jupyter labextension build .",
+    "build:labextension:dev": "jupyter labextension build --development True .",
+    "lint": "eslint src embed.js extension.js get-version-info.js index.js labplugin.js",
+    "watch": "webpack --watch --mode=development",
+    "test": "npm run lint"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4 || ^5 || ^6",
@@ -52,15 +51,15 @@
     "regl-scatterplot": "~1.6.9"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.5.2",
+    "@jupyterlab/builder": "^3.6.3",
     "css-loader": "^3.6.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.1",
     "style-loader": "^1.3.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
