migrate to anywidget (#67)
* feat: migrate js to anywidget esm

* Add anywidget, remove complicated packaging

* update workflows

* cleanup other widgets stuff left behind

* don't delete version info

* fix versioning

* comments

* feat: add builder step

* Update dev environment

* Restrict jlab version

* Fix rendering issues

* Update pub-sub-es to fix the view syncing issue

* Improve the view syncing related event subscription

* use object-based model

---------

Co-authored-by: Fritz Lekschas <code@lekschas.de>

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ coverage
 *.DS_cache
 *.ipynb_checkpoints
 *.egg-info
+.venv
 
 __pycache__
 
@@ -26,6 +27,7 @@ js/dist
 
 jscatter/labextension
 jscatter/nbextension
+jscatter/bundle.js
 
 notebooks/data
 
