--- a/js/package.json
+++ b/js/package.json
@@ -3,39 +3,17 @@
   "version": "0.12.4",
   "description": "A scatter plot extension for Jupyter Notebook and Lab",
   "author": "Fritz Lekschas",
-  "main": "src/index.js",
-  "publishConfig": {
-    "main": "dist/index.js"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/flekschas/jupyter-scatter.git"
   },
   "license": "Apache-2.0",
-  "keywords": [
-    "scatter",
-    "scatter plot",
-    "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
-  ],
-  "files": [
-    "embed.js",
-    "extension.js",
-    "index.js",
-    "labplugin.js",
-    "src/**/*.js",
-    "dist/*.js"
-  ],
   "scripts": {
-    "clean": "rimraf dist/ && rimraf ../jscatter/labextension/ && rimraf ../jscatter/nbextension",
-    "prepare": "npm run clean && npm run lint && npm run build:prod",
-    "build": "webpack --mode=development && npm run build:labextension:dev",
-    "build:prod": "webpack --mode=production && npm run build:labextension",
-    "build:labextension": "jupyter labextension build .",
-    "build:labextension:dev": "jupyter labextension build --development True .",
-    "lint": "eslint src embed.js extension.js get-version-info.js index.js labplugin.js",
-    "watch": "webpack --watch --mode=development",
+    "clean": "rm ../jscatter/bundle.js",
+    "prepare": "npm run lint && npm run build",
+    "build": "esbuild --bundle --format=esm --outfile=../jscatter/bundle.js src/index.js",
+    "lint": "eslint src/*",
+    "watch": "npm run build -- --watch",
     "test": "npm run lint"
   },
   "dependencies": {
@@ -45,33 +23,18 @@
     "d3-selection": "~3.0.0",
     "dom-2d-camera": "~2.2.5",
     "gl-matrix": "~3.3.0",
-    "lodash": "~4.17.21",
-    "pub-sub-es": "~2.0.1",
+    "pub-sub-es": "~2.0.2",
     "regl": "~2.1.0",
     "regl-scatterplot": "~1.6.9"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.6.3",
-    "css-loader": "^3.6.0",
+    "esbuild": "^0.17.14",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
-    "rimraf": "^5.0.1",
-    "style-loader": "^1.3.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "jupyterlab": {
-    "extension": "labplugin",
-    "outputDir": "../jscatter/labextension",
-    "sharedPackages": {
-      "@jupyter-widgets/base": {
-        "bundled": false,
-        "singleton": true
-      }
-    }
+    "rimraf": "^5.0.1"
   }
 }
