--- a/js/package.json
+++ b/js/package.json
@@ -17,15 +17,17 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "@flekschas/utils": "^0.32.1",
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4 || ^5 || ^6",
     "d3-axis": "~3.0.0",
+    "d3-format": "~3.1.0",
     "d3-scale": "~4.0.2",
     "d3-selection": "~3.0.0",
     "dom-2d-camera": "~2.2.5",
     "gl-matrix": "~3.3.0",
     "pub-sub-es": "~2.0.2",
     "regl": "~2.1.0",
-    "regl-scatterplot": "~1.7.1"
+    "regl-scatterplot": "~1.8.2"
   },
   "devDependencies": {
     "esbuild": "^0.17.14",
