--- a/js/package.json
+++ b/js/package.json
@@ -25,18 +25,15 @@
     "d3-selection": "~3.0.0",
     "dom-2d-camera": "~2.2.5",
     "gl-matrix": "~3.3.0",
-    "pub-sub-es": "~2.0.2",
+    "pub-sub-es": "~2.1.1",
     "regl": "~2.1.0",
     "regl-scatterplot": "~1.8.4"
   },
   "devDependencies": {
-    "esbuild": "^0.17.14",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "rimraf": "^5.0.1"
+    "esbuild": "^0.19.5",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3"
   }
 }
