--- a/js/package.json
+++ b/js/package.json
@@ -21,6 +21,7 @@
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4 || ^5 || ^6",
     "d3-axis": "~3.0.0",
     "d3-format": "~3.1.0",
+    "d3-hierarchy": "~3.1.2",
     "d3-scale": "~4.0.2",
     "d3-selection": "~3.0.0",
     "dom-2d-camera": "~2.2.5",
