--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,9 +61,9 @@ dev = [
 path = "js/package.json"
 pattern = "\"version\": \"(?P<version>.+?)\""
 
-[tool.hatch.build]
+[tool.hatch.build.targets.wheel]
+packages = ["jscatter"]
 artifacts = ["jscatter/bundle.js"]
-
 
 [tool.hatch.build.hooks.jupyter-builder]
 build-function = "hatch_jupyter_builder.npm_builder"
