chore: simplify command names

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,9 @@
     "vitepress": "^1.0.0-rc.42"
   },
   "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "start": "vitepress dev",
+    "dev": "vitepress dev",
+    "build": "vitepress build",
+    "preview": "vitepress preview"
   }
 }
