feat: tooltip preview (#112)
* feat: add tooltip content preview

* docs: update project URLs

* chore: set default python version to 3.11

* docs: extent `tooltip()` docstring

* docs: update `scatter.tooltip()` API docs

* docs: fix a small typo

* fix: two small visual tooltip preview issues

* docs: expand tooltip getting started guide

Since the tooltip getting started guide is getting fairly involved, I moved it into its own page.

* docs: fix typo

* fix: remove accidentally added `console.log`

* fix: cut out black frames from the beginning

* chore: update vitepress

* fix: preview can be null

* chore: simplify command names

* fix: broken link to `scatter.options`

* docs: add link to jscatter tutorial

* docs: update getting started intro

* docs: fix incorrect highlighting and update related sentence

* docs: update link name

* fix: ordering bug in updating data driven encodings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,10 @@ dependencies = [
 dynamic = ["version"]
 
 [project.urls]
-homepage = "https://github.com/flekschas/jscatter"
+homepage = "https://jupyter-scatter.dev"
+documentation = "https://jupyter-scatter.dev/api"
+repository = "https://github.com/flekschas/jupyter-scatter"
+changelog = "https://github.com/flekschas/jupyter-scatter/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
@@ -78,3 +81,4 @@ path = "js"
 
 [tool.hatch.envs.default]
 features = ["dev"]
+python = "3.11"
