--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "jupyter-scatter"
 description = "An interactive scatter plot widget for Jupyter Notebook, Lab, and Google Colab that can handle millions of points and supports view linking"
 authors = [
-  { name = "Fritz Lekschas", author_email = "code@lekschas.de" }
+  { name = "Fritz Lekschas", email = "code@lekschas.de" }
 ]
 license = { text = "Apache-2.0" }
 readme = "README.md"
@@ -82,3 +82,6 @@ path = "js"
 [tool.hatch.envs.default]
 features = ["dev"]
 python = "3.11"
+
+[tool.hatch.envs.default.scripts]
+test = "pytest ."
