--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ changelog = "https://github.com/flekschas/jupyter-scatter/blob/main/CHANGELOG.md
 dev = [
     "anywidget[dev]",
     "black[jupyter]",
-    "jupyterlab>=3.0,<4",
+    "jupyterlab",
     "pytest",
     "ruff",
 ]
