--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyter-scatter",
-  "version": "0.15.1",
+  "version": "0.16.0",
   "description": "A scatter plot extension for Jupyter Notebook and Lab",
   "author": "Fritz Lekschas",
   "repository": {
@@ -24,11 +24,13 @@
     "d3-hierarchy": "~3.1.2",
     "d3-scale": "~4.0.2",
     "d3-selection": "~3.0.0",
+    "d3-time": "~3.1.0",
+    "d3-time-format": "~4.1.0",
     "dom-2d-camera": "~2.2.5",
     "gl-matrix": "~3.3.0",
-    "pub-sub-es": "~2.1.1",
+    "pub-sub-es": "~3.0.0",
     "regl": "~2.1.0",
-    "regl-scatterplot": "file:../../regl-scatterplot/"
+    "regl-scatterplot": "~1.9.4"
   },
   "devDependencies": {
     "esbuild": "^0.19.5",
