--- a/js/package.json
+++ b/js/package.json
@@ -30,7 +30,7 @@
     "gl-matrix": "~3.3.0",
     "pub-sub-es": "~3.0.0",
     "regl": "~2.1.0",
-    "regl-scatterplot": "~1.9.4"
+    "regl-scatterplot": "file:../../regl-scatterplot/"
   },
   "devDependencies": {
     "esbuild": "^0.19.5",
