--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "matplotlib",
     "numpy",
     "pandas",
+    "seaborn",
     "traittypes>=0.2.1",
     "typing_extensions",
 ]
