feat: contour line annotation (#163)
* chore: remove unused imports

* feat: add contour line annotation

* docs: document contour line usage

* docs: add API docs and docstrings for annotations

* docs: update changelog

* fix: add missing seaborn dependency

* fix: contour annotations require at least Python v3.9

* fix: add scipy dependency

SciPy is needed for the contour annotation as it's internally used to compute the kernel density estimator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "matplotlib",
     "numpy",
     "pandas",
+    "scipy",
+    "seaborn",
     "traittypes>=0.2.1",
     "typing_extensions",
 ]
