--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,11 @@ jobs:
           npm update
           npm ci
 
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
       - uses: astral-sh/setup-uv@v3
         with:
           version: "0.4.x"
 
       - name: Run tests
         run: uv run pytest . --color=yes
+        env:
+          UV_PYTHON: ${{ matrix.python-version }}
