--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
   "matplotlib",
   "numpy",
   "pandas",
+  "pooch>=1.3.0",
   "pyarrow",
   "scipy",
   "seaborn",
@@ -54,7 +55,7 @@ changelog = "https://github.com/flekschas/jupyter-scatter/blob/main/CHANGELOG.md
 [project.scripts]
 jupyter-scatter = "jscatter._cli:main"
 
-# Configures hatchling build system to use the verison
+# Configures hatchling build system to use the version
 # found in the package.json file for the python package.
 [tool.hatch.version]
 path = "js/package.json"
