--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           version: "0.4.x"
       - run: |
-          uv run ruff format --check
+          uv run ruff check
 
   Test:
     runs-on: ubuntu-latest
