--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,16 +32,20 @@ keywords = [
 ]
 dependencies = [
   "anywidget>=0.9.0",
+  "fast_hdbscan",
+  "geoindex-rs",
   "ipywidgets>=7.6,<9",
   "ipython",
-  "matplotlib",
+  "matplotlib>=3.9",
+  "numba",
   "numpy",
   "pandas",
   "pooch>=1.3.0",
   "pyarrow",
+  "pycolormap-2d",
   "scipy",
   "seaborn",
-  "traittypes>=0.2.1",
+  "tqdm",
   "typing_extensions",
 ]
 dynamic = ["version"]
@@ -76,13 +80,6 @@ npm = "npm"
 build_cmd = "build"
 path = "js"
 
-[tool.pytest.ini_options]
-filterwarnings = [
-  # Ignore unrelated DeprecationWarning from traitlets:
-  # Sentinel is not a public part of the traitlets API.
-  "ignore::DeprecationWarning:traitlets:28",
-]
-
 [tool.uv]
 dev-dependencies = [
   "anywidget[dev]",
@@ -90,6 +87,7 @@ dev-dependencies = [
   "pre-commit",
   "pyarrow",
   "pytest",
+  "pytest-cov",
   "ruff",
 ]
 
