test: install llvm to hopefully fix CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
           npm update
           npm ci
 
+      - name: Install LLVM dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y llvm-dev
+
       - uses: astral-sh/setup-uv@v5
         with:
           version: "0.4.x"
