--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "An interactive scatter plot widget for Jupyter Notebook, Lab, and
 authors = [{ name = "Fritz Lekschas", email = "code@lekschas.de" }]
 license = { text = "Apache-2.0" }
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9, <3.13"
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
@@ -18,7 +18,6 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: 3.13",
 ]
 keywords = [
   "scatter",
