--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "An interactive scatter plot widget for Jupyter Notebook, Lab, and
 authors = [{ name = "Fritz Lekschas", email = "code@lekschas.de" }]
 license = { text = "Apache-2.0" }
 readme = "README.md"
-requires-python = ">=3.9, <3.13"
+requires-python = ">=3.9"
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
@@ -18,6 +18,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
 ]
 keywords = [
   "scatter",
@@ -31,22 +32,23 @@ keywords = [
 ]
 dependencies = [
   "anywidget>=0.9.0",
-  "fast_hdbscan",
   "geoindex-rs",
   "ipywidgets>=7.6,<9",
   "ipython",
   "matplotlib>=3.9",
-  "numba",
   "numpy",
   "pandas",
   "pooch>=1.3.0",
   "pyarrow",
   "scipy",
-  "seaborn",
-  "tqdm",
   "typing_extensions",
 ]
 dynamic = ["version"]
+
+[project.optional-dependencies]
+label-extras = ["tqdm", "hdbscan"]
+annotation-extras = ["seaborn"]
+all = ["hdbscan", "seaborn", "tqdm"]
 
 [project.urls]
 homepage = "https://jupyter-scatter.dev"
@@ -77,6 +79,12 @@ dependencies = ["hatch-jupyter-builder>=0.5.0"]
 npm = "npm"
 build_cmd = "build"
 path = "js"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+  "ignore:invalid escape sequence:SyntaxWarning",
+  "ignore:'force_all_finite' was renamed to 'ensure_all_finite':FutureWarning"
+]
 
 [tool.uv]
 dev-dependencies = [
